<resources>

    <string name="app_name" translatable="false">XInternalSD</string>
    <string name="app_description">Change path to internal SD card</string>
    <string name="app_settings">Settings</string>
    <string name="custom_internal_sd">Custom path to internal SD card</string>
    <string name="internal_sd_path">Path to internal SD card</string>
    <string name="enable_for_apps">Enable for some apps</string>
    <string name="enable_for_all_apps">Enable for all apps</string>
    <string name="disable_for_apps">Disable for some apps</string>
    <string name="enter_internal_sd_path">Enter path to internal SD card</string>
    <string name="sdcard_full_access">Full access to external SD card</string>
    <string name="include_system_apps">Include system apps</string>
    <string name="change_system_dirs_path">Change path to system directories</string>
    <string name="alarms">Alarms</string>
    <string name="dcim">DCIM</string>
    <string name="documents">Documents</string>
    <string name="downloads">Downloads</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="notifications">Notifications</string>
    <string name="pictures">Pictures</string>
    <string name="podcasts">Podcasts</string>
    <string name="ringtones">Ringtones</string>

</resources>