<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="app_settings"
        android:title="@string/app_settings" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="custom_internal_sd"
            android:title="@string/custom_internal_sd" />

        <EditTextPreference
            android:defaultValue="/sdcard"
            android:key="internal_sd_path"
            android:summary="@string/enter_internal_sd_path"
            android:title="@string/internal_sd_path" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="change_download_path"
            android:title="@string/change_download_path" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_for_all_apps"
            android:title="@string/enable_for_all_apps" />

        <MultiSelectListPreference
            android:key="enable_for_apps"
            android:title="@string/enable_for_apps" />
        <MultiSelectListPreference
            android:key="disable_for_apps"
            android:title="@string/disable_for_apps" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="sdcard_full_access"
            android:title="@string/sdcard_full_access" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="include_system_apps"
            android:title="@string/include_system_apps" />
    </PreferenceCategory>

</PreferenceScreen>